--- a/manuscript/manuscript.qmd
+++ b/manuscript/manuscript.qmd
@@ -100,21 +100,21 @@ To capture key details of each study, we added additional fields to BibTeX entri
 
 First we describe the overall pattern of data (regression vs classification, modelling techniques, feature numbers, stimulus numbers, datasets, and other details).
 
-TABLE 1: Summary of data (part of `analysis/preprocessing.qmd` updated 21/1/2025)
+TABLE 1: Summary of data (part of `analysis/preprocessing.qmd` updated 20/2/2025)
 
 |            | Regression                      | Classification            | Total |
 |:-----------|:--------------------------------|:--------------------------|:------|
 | Study N    | 22                              | 12                        | 34    |
 | Model N    | 204                             | 86                        | 290   |
-| Techniques | Neural Nets: 66                 | 25                        | 91    |
-| Techniques | Support Vector Machines: 50     | 26                        | 76    |
-| Techniques | Linear Methods: 62              | 13                        | 75    |
-| Techniques | Tree-based Methods: 14          | 10                        | 34    |
-| Techniques | KS, Add. & KNN: 12              | 12                        | 24    |
-| Feature N  | Min=3, Md=605, Max=6670         | Min=8, Md=126, Max=8904   | NA    |
+| Techniques | Neural Nets: 64                 | 21                        | 85    |
+| Techniques | Support Vector Machines: 62     | 26                        | 88    |
+| Techniques | Linear Methods: 62              | 19                        | 81    |
+| Techniques | Tree-based Methods: 14          | 16                        | 30    |
+| Techniques | KS, Add. & KNN:  2              | 4                         | 6     |
+| Feature N  | Min=3, Md=653, Max=14460        | Min=6, Md=98, Max=8904    | NA    |
 | Stimulus N | Min=20, Md=324, Max=2486        | Min=124, Md=300, Max=5192 | NA    |
 
-Although the total number of studies meeting the criteria described in the previous section is modest (34 in total), they encompass a large array of models (290 in total) with a relatively even distribution among the three most popular techniques: Neural Nets, SVMs, and Linear Methods. The number of features and stimuli within these studies varies significantly, ranging from as few as three features [@battcock2021in] to a maximum of almost 9000 features [@zhang2023mo]. The median number of features differs between regression (605) and classification (126) studies, primarily reflecting the nature of the datasets used in each approach. The number of stimuli is typically around 300-400 (with a median of 324 for regression and 300 for classification), though there is substantial variation, with the extremes from 20 stimuli in @beveridge2018po to 5192 stimuli in @alvarez2023ri. There are also additional dimensions to consider, such as the type of cross-validation used, the music genres analyzed (whether a single genre, multiple genres, or a mix), the type of journal in which the studies were published, and the extraction tool used to extract features. However, these variables do not lend themselves to a simple summary, so we will revisit them during the interpretation and discussion stages.
+Although the total number of studies meeting the criteria described in the previous section is modest (34 in total), they encompass a large array of models (290 in total) with a relatively even distribution among the three most popular techniques: Neural Nets, SVMs, and Linear Methods. The number of features and stimuli within these studies varies significantly, ranging from as few as three features [@battcock2021in] to a maximum of almost 14,500 features [@zhang2023mo]. The median number of features differs between regression (653) and classification (98) studies, primarily reflecting the nature of the datasets used in each approach. The number of stimuli is typically around 300-400 (with a median of 324 for regression and 300 for classification), though there is substantial variation, with the extremes from 20 stimuli in @beveridge2018po to 5192 stimuli in @alvarez2023ri. There are also additional dimensions to consider, such as the type of cross-validation used, the music genres analyzed (whether a single genre, multiple genres, or a mix), the type of journal in which the studies were published, and the extraction tool used to extract features. However, these variables do not lend themselves to a simple summary, so we will revisit them during the interpretation and discussion stages.
 
 We first report regression studies that predict valence and arousal.
 
@@ -132,20 +132,19 @@ Table 2. Meta-analytic diagnostic for all regression studies predicting valence 
 
 | Concept      | Models, obs | $r$ \[95%-CI\]          | $t$   | $p$   | $\tau^2$ | $I^2$ |
 |:-------------|:------------|:------------------------|:------|:------|:---------|:------|
-| Valence All  | 102,60017   | 0.583 \[0.541-0.623\]   | 21.40 | .0001 | 0.094    | 97.7% |
+| Valence All  | 102,60017   | 0.583 \[0.541-0.623\]   | 21.41 | .0001 | 0.094    | 97.7% |
 | Valence Max  | 22,14172    | 0.669 \[0.560-0.755\]   | 9.58  | .0001 | 0.148    | 98.4% |
 | *N Features* |             |                         |       |       |          |       |
-| \<18 F       | 5,3036      | 0.811 \[0.542-0.823\]   | \-    | \-    | 0.182    | 98.9% |
-| 18-260 F     | 11,7042     | 0.584 \[0.534-0.931\]   | \-    | \-    | 0.133    | 97.6% |
-| 260+ F       | 5,3494      | 0.710 \[0.542-0.823\]   | \-    | \-    | 0.044    | 97.2% |
+| \<30 F       | 6,3140      | 0.766 \[0.488-0.903\]   | \-    | \-    | 0.198    | 98.6% |
+| 30-300 F     | 8,4098      | 0.580 \[0.276-0.778\]   | \-    | \-    | 0.188    | 97.4% |
+| 300+ F       | 8,6934      | 0.666 \[0.531-0.767\]   | \-    | \-    | 0.062    | 98.0% |
 | *Techniques* |             |                         |       |       |          |       |
-| KS           | 1,1838      | 0.466 \[-0.634-0.942\]  | \-    | \-    | 0.0185   | 95.1% |
-| LM           | 8,1762      | 0.797 \[0.614-0.899\]   | \-    | \-    | 0.1370   | 96.4% |
-| SVM          | 6,4993      | 0.656 \[0.484-0.779\]   | \-    | \-     | 0.0574  | 96.9% |
-| NN           | 4,2249      | 0.393 \[-0.355-0.835\]  | \-    | \-     | 0.0761  | 97.1% |
-| TM           | 3,3330      | 0.750 \[0.292-0.928\]   | \-    | \-     | 0.093   | 98.5% |
+| LM           | 9,2457      | 0.784 \[0.652-0.870\]   | \-    | \-    | 0.1194   | 96.3% |
+| SVM          | 4,5068      | 0.539 \[0.171-0.774\]   | \-    | \-    | 0.0702   | 97.1% |
+| NN           | 6,3317      | 0.473 \[0.167-0.696\]   | \-    | \-    | 0.1029   | 98.2% |
+| TM           | 3,3330      | 0.750 \[0.292-0.928\]   | \-    | \-    | 0.0740   | 98.8% |
 
-<!-- table updated TE 21/1/2025, revised terms 28/1/2025 -->
+<!-- table updated CA 20/2/2025, revised terms 28/1/2025 -->
 
 The results indicate that valence can generally be predicted with moderately accuracy, with the best model from each of the 22 studies achieving an average correlation of _r_ = 0.669 (95% CI: 0.560-0.755), called "valence Max" in Table 2. However, when considering all models across these studies (n = 102), the overall prediction rate drops significantly to _r_ = 0.583. We argue that this lower correlation is likely due to the inclusion of baseline models reported in these studies, which may not reflect the true success of the task for the purposes of our analysis.
 
@@ -153,17 +152,17 @@ Further analysis of between-study heterogeneity, as indexed by the $\tau^2$ (0.1
 
 To better understand the effects across studies and the nature of the observed heterogeneity, Figure 2 presents (A) a forest and (B) funnel plot of the random-effects model, based on the best-performing models from all studies. In terms of the forest plot, the range of prediction values (correlations) is broad, spanning from 0.13 to 0.92, with all studies except Koh et al. (2023) demonstrating evidence of positive correlations. A mean estimate of 0.67 is achieved by 15 out of the 22 models. While the confidence intervals are generally narrow due to the large sample sizes in each study, there are exceptions, such as smaller sample sizes in @beveridge2018po (n = 20), and in @griffiths2021am (n = 40). The funnel plot in panel B of Figure 2 shows clustering at the top of the plot (studies with low standard error) and no assumed larger diversity in the correlations when the error rates increase. However, there is no clear asymmetry in the plot, verified by non-significant Egger's test ($\beta$ = 5.05, CI95% -0.99-11.09, _t_ = 1.64, _p_ = 0.112, @eggersmith_1997). Coming back to the mean of valence correlation of 0.669 by all studies and the possible impact of study heterogeneity on this estimation, we also calculated the correlation without the studies that lie outside the 95% CI for pooled effect. This left 12 studies in the data and resulted in the meta-analytical pooled correlation of 0.686 (CI95% 0.635-0.731). In other words, despite the large variation in the correlations and standard errors across the studies, this variation in itself does not seem to be a significant driver behind the overall effect.
 
-<!-- numbers in the text updated up to here, TE 21/1/2025 -->
+<!-- numbers in the text updated up to here, CA 20/2/2025 -->
 
 {{< include _figure2.qmd >}}
 
-To gain insights into the factors contributing to the wide range of model success, we explored several ways of splitting the data. Table 2 presents two key splits: one based on the number of features used, which we hypothesized might influence model performance, and another based on the modeling techniques employed. In terms of feature sets, we categorized them into three groups: few features (<18), a large number of features (18–260), and massive feature sets (260+). Interestingly, models (4 in total) using a relatively small number of features (<18) performed best (_r_ = 0.817, 95% CI: 0.361–0.958) compared to those utilizing larger feature sets. However, it is worth noting that the models using massive feature sets (260+, 7 studies in total) also performed well (_r_ = 0.702), achieving better and more consistent results than the overall prediction rate (_r_ = 0.669). This observation is supported by the lowest heterogeneity index for the massive feature set group ($\tau^2$ = 0.029), indicating more consistent results across studies. Studies with large number of features (18-260 features, 10 studies in total) delivered the worst results, _r_ = 0.586 (95% CI: 0.360–0.748). Despite the fluctuation in the overall model accuracy between the number of features, the differences are not substantially large to pass the test of statistical significance (_Q_(2) = 3.47, _p_=.176).
+To gain insights into the factors contributing to the wide range of model success, we explored several ways of splitting the data. Table 2 presents two key splits: one based on the number of features used, which we hypothesized might influence model performance, and another based on the modeling techniques employed. In terms of feature sets, we categorized them into three groups: few features (<30), a large number of features (30–300), and massive feature sets (300+). Interestingly, models (6 in total) using a relatively small number of features (<30) performed best (_r_ = 0.766, 95% CI: 0.488–0.903) compared to those utilizing larger feature sets. However, it is worth noting that the models using massive feature sets (300+, 8 studies in total) also performed reasonably well (_r_ = 0.666), achieving more consistent results than the overall prediction rate (_r_ = 0.669). This observation is supported by the lowest heterogeneity index for the massive feature set group ($\tau^2$ = 0.062), indicating more consistent results across studies. Studies with large number of features (30-300 features, 8 studies in total) delivered the worst results, _r_ = 0.580 (95% CI: 0.276–0.778). Despite the fluctuation in the overall model accuracy between the number of features, the differences are not substantially large to pass the test of statistical significance (_Q_(2) = 2.03, _p_=.363).
 
-<!-- numbers in the text updated up to here, TE 21/1/2025 -->
+<!-- numbers in the text updated up to here, CA 20/2/2025 -->
 
-When analyzing the studies across the five modeling techniques used, the prediction do differ significantly (_Q_(4) = 45.7, _p_ < .0001). Notably, linear models (LM) and Support Vector Machines (SVM) were the most common, with 8 and 6 studies, respectively, allowing for more confident interpretations. Linear models achieved the highest prediction rate (_r_ = 0.784, 95% CI: 0.625–0.881), though this may be influenced by the smaller datasets typically used in these studies. These studies also exhibited substantially higher heterogeneity ($\tau^2$ = 0.137) compared to other techniques, where $\tau^2$ values were less than half of this. While there were only 3 studies involving tree-based model (TM), these performed well, achieving _r_ = 0.750, 95% CI: 0.292–0.928), and the relatively poor performance of the neural network (NN) models represented in four studies (_r_ = 0.340, 95% CI: -0.097–0.668) is difficult to explain without a deeper examination of the specific model architectures and the stimuli used in these studies. Kernel smoothing and KNN models (with only 1 study represented) achieved relatively poor success as well, _r_ = 0.383, 95% CI: 0.348–0.426).
+When analyzing the studies across the four modeling techniques used, the prediction do differ significantly (_Q_(3) = 12.43, _p_ = .0061). Notably, linear models (LM) and neural networks (NN) were the most common, with 9 and 6 studies, respectively, allowing for more confident interpretations. Linear models achieved the highest prediction rate (_r_ = 0.784, 95% CI: 0.652–0.870), though this may be influenced by the smaller datasets typically used in these studies. These studies also exhibited higher heterogeneity ($\tau^2$ = 0.119) compared to other techniques. While there were only 3 studies involving tree-based model (TM), these performed well, achieving _r_ = 0.750, 95% CI: 0.292–0.928), and the relatively poor performance of the neural network (NN) models represented in six studies (_r_ = 0.473, 95% CI: 0.167–0.696) is difficult to explain without a deeper examination of the specific model architectures and the stimuli used in these studies. 
 
-We also ran the sub-grouping analyses across a combination of stimulus genres (single vs mixed) and number of the features to explore where the differences in the model prediction rates might lie. For this purpose, we grouped the studies into small single genre/multigenre studies, medium single genre/multigenre studies, and medium-large single genre/multigenre studies, and huge multigenre studies. The small single genre/multigenre studies generally performed best (_r_ = 0.836), followed by huge multi-genre studies (_r_ = 0.693) while the medium and medium-large sized studies performance was between close the overall average (medium-large, _r_ = 0.768 and medium _r_ = 0.607). The heterogeneity was lowest in the huge multigenre studies ($\tau^2$ = 0.013) and highest in the small single genre/multigenre studies ($\tau^2$ = 0.318). 
+We also ran the sub-grouping analyses across stimulus genres (single vs mixed), finding no significant difference (_Q_(1) = 0.01, _p_ = .9158). Both single-genre (_r_ = 0.675 95% CI: 0.465, 0.813, _n_ = 8) and multi-genre (_r_ = 0.665, 95% CI: 0.508-0.779, _n_ = 14) achieved similar results, although multi-genre studies exhibited slightly higher heterogeneity ($\tau^2$ = 0.167) than single-genre studies ($\tau^2$ = 0.137). 
 
 <!-- However, these analyses did not reveal any clear patterns, likely due to the small number of studies in each subgroup.  -->
 
@@ -171,11 +170,11 @@ We also ran the sub-grouping analyses across a combination of stimulus genres (s
 
 These comparisons of sub-groupings are also influenced by other factors, such as the type of journal (psychology vs engineering) or whether the objective is to explain or predict emotions. Although the sub-groupings result in an uneven distribution of studies and observations, they still offer valuable insights. Despite these caveats, the two main sub-groupings portrayed in Table 2 enable us to identify valuable differences related to model success across the studies.
 
-<!-- numbers in the text updated up to here, TE 21/1/2025 -->
+<!-- numbers in the text updated up to here, CA 20/2/2025 -->
 
 ### Results for arousal
 
-Moving on the arousal, we carry out the same meta-analytical analysis applying the random-effects model to arousal. Table 3 describes the broad pattern of results in tabular format, and Figure 3 illustrates the spread and heterogeneity of all studies for arousal. The overall correlation across the studies using the best performing model out of each study (Max) is 0.809 (CI95% 0.740-0.860). If we examine all the models reported in each study, the correlation drops marginally, to 0.791 (CI95% 0.770-0.810), despite this analysis includes about four times as many models as taking the best model out of each study. For arousal, even the baseline models seem to be performing on a relative high level. However, the indicators of heterogeneity are again high ($\tau^2$ = 0.141 and $I^2$=97.9%), which suggests that summary may be misleading. However, the analysis of asymmetry does not reveal significant issues (Eggers test, $\beta$ = 0.789 95%CI -4.87-6.45, _t_ = 0.273, _p_ = 0.788). If we remove the studies that are outside the 95%CI in heterogeneity, leaves this 13 studies in the summary that has _r_ = 0.826 (95%CI 0.806-0.845) with $\tau^2$ = 0.0042 and $I^2$ = 76.8%. In other words, no material difference to the results obtained with all 22 studies.
+Moving on the arousal, we carry out the same meta-analytical analysis applying the random-effects model to arousal. Table 3 describes the broad pattern of results in tabular format, and Figure 3 illustrates the spread and heterogeneity of all studies for arousal. The overall correlation across the studies using the best performing model out of each study (Max) is 0.809 (CI95% 0.740-0.860). If we examine all the models reported in each study, the correlation drops marginally, to 0.791 (CI95% 0.770-0.810), despite this analysis including about four times as many models as taking the best model out of each study. For arousal, even the baseline models seem to perform at a relatively high level. However, the indicators of heterogeneity are again high ($\tau^2$ = 0.141 and $I^2$=97.9%), which suggests that summary may be misleading. However, the analysis of asymmetry does not reveal significant issues (Eggers test, $\beta$ = 0.789 95%CI -4.87-6.45, _t_ = 0.273, _p_ = 0.788). If we remove the studies that are outside the 95%CI in heterogeneity, leaves this 13 studies in the summary that has _r_ = 0.826 (95%CI 0.806-0.845) with $\tau^2$ = 0.0042 and $I^2$ = 76.8%. In other words, no material difference to the results obtained with all 22 studies.
 
 Table 3. Meta-analytic diagnostic for all regression studies predicting arousal from audio.
 
@@ -184,27 +183,26 @@ Table 3. Meta-analytic diagnostic for all regression studies predicting arousal 
 | Arousal All  | 102, 60017  | 0.791 \[0.770-0.810\]     | 39.9 | 0.0001 | 0.069    | 96.2% |
 | Arousal Max  | 22, 14172   | 0.809 \[0.740-0.860\]     | 13.6 | 0.0001 | 0.141    | 97.9% |
 | *N Features* |             |                           |      |        |          |       |
-| \<18 F       | 4, 3016     | 0.817 \[0.361-0.958\]     |      |        | 0.2295   | 99.2% |
-| 18-260 F     | 10, 4222    | 0.586 \[0.356-0.748\]     |      |        | 0.1542   | 96.9% |
-| 260+ F       | 7, 6190     | 0.702 \[0.612-0.774\]     |      |        | 0.0285   | 96.6% |
+| \<30 F       | 6, 3140     | 0.885 \[0.782-0.940\]     |      |        | 0.0948   | 93.5% |
+| 30-300 F     | 8, 4098     | 0.735 \[0.501-0.868\]     |      |        | 0.1971   | 98.2% |
+| 300+ F       | 8, 6934     | 0.804 \[0.716-0.867\]     |      |        | 0.0612   | 97.4% |
 | *Techniques* |             |                           |      |        |          |       |
-| KS           | 1, 1838     | 0.819 \[0.803-0.833\]     |      |        |  -       | -     |
-| LM           | 8, 1762     | 0.881 \[0.808-0.928\]     |      |        | 0.0846   | 93.3% |
-| SVM          | 6, 4993     | 0.808 \[0.644-0.901\]     |      |        | 0.1125   | 98.0% |
-| NN           | 4, 2249     | 0.533 \[0.328-0.691\]     |      |        | 0.0190   | 85.8% |
+| LM           | 8, 1713     | 0.882 \[0.809-0.928\]     |      |        | 0.0846   | 93.3% |
+| SVM          | 5, 5812     | 0.796 \[0.559-0.913\]     |      |        | 0.1325   | 98.3% |
+| NN           | 6, 3317     | 0.660 \[0.395-0.823\]     |      |        | 0.1209   | 98.1% |
 | TM           | 3, 3330     | 0.809 \[0.733-0.864\]     |      |        | 0.0025   | 65.4% |
 
-<!-- numbers in the text updated up to here, TE 22/1/2025 -->
+<!-- numbers in the text updated up to here, CA 20/2/2025 -->
 
 <!-- Schwarzer and colleagues (Schwarzer, Carpenter, and Rücker 2015, chap. 4.3) mention, as a general rule of thumb, that subgroup analyses only make sense when your meta-analysis contains at least 
 K= 10 studies.-->
 
-Figure 3 presents (A) a forest and (B) funnel plot of the random-effects model of the best-performing models from all studies. Similarly to valence, the range of correlations is also wide for arousal, ranging from 0.35 to 0.95, with all studies demonstrating evidence of positive correlations. A mean estimate of 0.81 or higher is achieved by the majority (15 out of the 22 models). Due to large sample in most studies, the confidence intervals are narrow, although the exceptions ($N < 55$) are clearly visible [@beveridge2018po; @griffiths2021am;@koh2023me; @saizclar2022pr; @wang2021ac]. The funnel plot in panel B illustrates the limited range of the correlations and show heavy clustering at the top of the plot (studies with low standard error). There is no clear asymmetry in the plot, verified by non-significant Egger's test reported above.
+Figure 3 presents (A) a forest and (B) funnel plot of the random-effects model of the best-performing models from all studies. Similarly to valence, the range of correlations is also wide for arousal, ranging from 0.35 to 0.95, with all studies demonstrating evidence of positive correlations. A mean estimate of 0.82 or higher is achieved by the majority (14 out of the 22 models). Due to large sample in most studies, the confidence intervals are narrow, although the exceptions ($N < 55$) are clearly visible [@beveridge2018po; @griffiths2021am;@koh2023me; @saizclar2022pr; @wang2021ac]. The funnel plot in panel B illustrates the limited range of the correlations and show heavy clustering at the top of the plot (studies with low standard error). There is no clear asymmetry in the plot, verified by non-significant Egger's test reported above.
 
-The analysis of the subdivision of studies shows that there is no significant differences between the studies using different number of features (_Q_(2) = 3.47, _p_ = .176) despite the differing means (_r_ = 0.817 for studies with less than 18 features, _r_ = 0.586 for 18 to 260 features, and _r_ = 0.702 for studies utilising over 260 features). The differences in the techniques, however, does show statistically significant variance between subgroups (_Q_(4) = 50.47, _p_ < .0001). The Neural Nets (NN) achieve poor prediction of arousal (_r_ = 0.533) in comparison to other techniques. The caveat of this subgroup analysis is the small number of observations for five techniques. When other subgroupings were explored, such as the type of journal (Engineering with 13 studies vs Psychology with 9 studies), no significant differences were observed (_Q_(1) = 0.94, _p_ = .333). 
+The analysis of the subdivision of studies shows that there is no significant differences between the studies using different number of features (_Q_(2) = 5.20, _p_ = .074) despite the differing means (_r_ = 0.885 for studies with less than 30 features, _r_ = 0.735 for 30 to 300 features, and _r_ = 0.804 for studies utilising over 300 features). The differences in the techniques, however, does show statistically significant variance between subgroups (_Q_(3) = 10.83, _p_ = .0127). The Neural Nets (NN) achieve poor prediction of arousal (_r_ = 0.660) in comparison to other techniques. The caveat of this subgroup analysis is the small number of observations for four techniques. When other subgroupings were explored, such as the type of journal (Engineering with 13 studies vs Psychology with 9 studies), no significant differences were observed (_Q_(1) = 0.94, _p_ = .333). 
 
 {{< include _figure3.qmd >}}
-
+<!-- numbers in the text updated up to here, CA 20/2/2025 -->
 
 ## Classification studies
 
