--- a/manuscript/manuscript.qmd
+++ b/manuscript/manuscript.qmd
@@ -206,14 +206,36 @@ The analysis of the subdivision of studies shows that there is no significant di
 
 ## Classification studies
 
-Summary of details contained in Table 1, but summarise at least the categories predicted before moving onto the main findings.
+We next evaluated classification studies. The number of emotion classes predicted varied between studies, ranging from two to eight. Across studies, most operationalizations corresponded to either affective dimensions of the circumplex model or discrete emotion labels mapping to those dimensions [e.g., happy, sad, nervous, and calm and similar variants used in @agarwal2021an; @alvarez2023ri; @yeh2014po]. Despite common adoption of the circumplex quadrants, studies differed in modeling dcisions: one study predicted quadrants in a multi-class problem [@panda2020no], whereas another predicted them in a series of binary classification tasks [@bhuvanakumar2023em]. Others predicted valence and arousal in separate tasks [@hu2022de; @zhang2016br], and some of the models analyzed only predicted arousal [e.g., all models in @zhang2017fe; the CART model in @zhang2016br]. Finally, some studies excluded specific quadrants [@hizlisoy2021mu] due to a lack of relevant stimuli, whereas others divided quadrants into multiple levels of valence and arousal [@nguyen2017an; @sorussa2020em].   Because only a few studies separately reported valence and arousal or quadrant classification, we averaged prediction success across them for each model to increase comaparability with other studies. 
+
+Figure 4 shows forest and funnel plot visualizations from the random-effects model of the best-performing models in classification studies. _MCC_s vary across a wide range, reporting _MCC_s between 0.55 to 0.98. Table 4 indicates that using the best model from each study increases performance relative to all models ($MCC$ = 0.8684 95%CI: 0.7475-0.9336), yet slightly increases heterogeneity ($\tau^2$ = 0.3180, $I^2$ = 99.8%).  
+
+{{< include _figure4.qmd >}}
+
+| Concept      | Models, obs | $r$ \[95%-CI\]            | $t$  | $p$    | $\tau^2$ | $I^2$ |
+|:-------------|:------------|:--------------------------|:-----|:-------|:---------|:------|
+| All Models   | 86, 80544   | 0.8245 \[0.7904-0.8535\]  | 23.7 | 0.0001 | 0.2082   | 99.7% |
+| Best Models  | 12, 15696   | 0.8684  \[0.7475-0.9336\] | 8.13 | 0.0001 | 0.3180   | 99.8% |
+| *N Features* |             |                           |      |        |          |       |
+| \<30 F       | 4, 6179     | 0.9293 \[0.8160-0.9738\]  |      |        | 0.0978   | 96.2% |
+| 30-300 F     | 5, 8193     | 0.8458 \[0.3613-0.9707\]  |      |        | 0.4822   | 99.9% |
+| 300+ F       | 3, 1324     | 0.7754 \[-0.2709-0.9818\] |      |        | 0.2724   | 97.7% |
+| *Techniques* |             |                           |      |        |          |       |
+| LM           | 2, 735      | 0.7280 \[-0.9957-0.9999\] |      |        | 0.1935   | 98.0% |
+| SVM          | 3, 6556     | 0.8699 \[-0.7268-0.9985\] |      |        | 0.8233   | 99.9% |
+| NN           | 3, 2313     | 0.9307  \[0.6523-0.9878\] |      |        | 0.1250   | 98.8% |
+| TM           | 4, 6092     | 0.8534 \[0.4464-0.9679\]  |      |        | 0.2430   | 99.1% |
+
+### Outlier analysis
+
+Accounting for outliers among the classifications results removes 6 studie, affecting both performance ($MCC$ = 0.8941, 95%CI: 0.8282-0.9356) and heterogeneity scores ($\tau^2$ = 0.0569, $I^2$ = 97.7%). However, Eggers' test does not indicate an asymmetric funnel plot ($\beta$ = -19.769, 95%CI: -39.29--0.24). After aggregating across dimensions, some of the best models included only classified arousal (@zhang2016; @zhang2017). To assess these studies' impact on overall performance, we conducted the same meta-analytic procedure after excluding them. Classification accuracy ($MCC$ = 0.8758, 95%CI: 0.7235-0.9468) does not change notably, nor does the rank order of model classes in terms of performance. Conseqeuntly, we report on all 12 in subsequent analyses.
+
+### Reporting splits
+
+The number of features analyzed does not significantly impact results (_Q_(2) = 3.91, _p_ = 0.1419), though $MCC$ shows differences on averages based on the number of features (< 30 F: $MCC$ = 0.9293; 30-300 F: $MCC$ = 0.8458; >300 F: $MCC$ = 0.7754). Conversely, model classes differ significantly (_Q_(3) = 4.22, _p_ = 0.239). Specifiaclly, neural networks outperform all other model types ($MCC$ = 0.9307), followed by SVMs ($MCC$ = 0.870) and tree-based methods ($MCC$ = 0.854), then linear methods ($MCC$ = 0.728). Studies did not differ based on whether stimuli comprised one or multiple genres (_Q_(1) = 0.12, _p_ = 0.7324), or whether studies employed binary or multi-class models (_Q_(1) = 0.03, _p_ = 0.8694). 
 
 Table 4. Meta-analytic diagnostic for all classification studies predicting emotion categories from audio.
 
-| Model | Models, obs | $r$ \[95%-CI\]            | $t$  | $p$    | $\tau^2$ | $I^2$ |
-|:------|:------------|:--------------------------|:-----|:-------|:---------|:------|
-| All   | 89,87347    | 0.8074 \[0.7681; 0.8407\] | 21.4 | 0.0001 | 0.2415   | 99.7% |
-| Max   | 14,17184    | 0.8564 \[0.7386; 0.9234\] | 8.32 | 0.0001 | 0.329    | 99.8% |
 
 <!-- | All Trim | 29,6499     | 0.8185 \[0.8046; 0.8314\] | 58.3 | 0.0001 | 0.0066   | 60.4% | -->
 
