--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -1,12 +1,78 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Tuomas Eerola at 2025-02-09 16:16:09 +0000 
+%% Created for Tuomas Eerola at 2025-02-22 17:53:01 +0000 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{hizlisoy2021mu,
+	author = {Hizlisoy, Serhat and Yildirim, Serdar and Tufekci, Zekeriya},
+	date-added = {2025-02-22 17:52:10 +0000},
+	date-modified = {2025-02-22 17:52:10 +0000},
+	doi = {10.1016/j.jestch.2020.10.009},
+	journal = {Engineering Science and Technology, an International Journal},
+	number = {3},
+	pages = {760 -- 767},
+	title = {Music emotion recognition using convolutional long short term memory deep neural networks},
+	type = {Article},
+	volume = {24},
+	year = {2021}}
+
+@article{nguyen2017an,
+	author = {Nguyen, Van Loi and Kim, Donglim and Ho, Van Phi and Lim, Younghwan},
+	date-added = {2025-02-22 17:52:10 +0000},
+	date-modified = {2025-02-22 17:52:10 +0000},
+	doi = {10.11591/ijece.v7i3.pp1246-1254},
+	journal = {International Journal of Electrical and Computer Engineering},
+	number = {3},
+	pages = {1246 -- 1254},
+	title = {A new recognition method for visualizing music emotion},
+	type = {Article},
+	volume = {7},
+	year = {2017}}
+
+@article{panda2020no,
+	author = {Panda, Renato and Malheiro, Ricardo and Paiva, Rui Pedro},
+	date-added = {2025-02-22 17:52:10 +0000},
+	date-modified = {2025-02-22 17:52:10 +0000},
+	doi = {10.1109/TAFFC.2018.2820691},
+	journal = {IEEE Transactions on Affective Computing},
+	number = {4},
+	pages = {614 -- 626},
+	title = {Novel Audio Features for Music Emotion Recognition},
+	type = {Article},
+	volume = {11},
+	year = {2020}}
+
+@article{zhang2017fe,
+	author = {Zhang, Jiang Long and Huang, Xiang Lin and Yang, Li Fang and Xu, Ye and Sun, Shu Tao},
+	date-added = {2025-02-22 17:52:10 +0000},
+	date-modified = {2025-02-22 17:52:10 +0000},
+	doi = {10.1007/s00530-015-0489-y},
+	journal = {Multimedia Systems},
+	number = {2},
+	pages = {251 -- 264},
+	source = {scopus},
+	title = {Feature selection and feature learning in arousal dimension of music emotion by using shrinkage methods},
+	type = {Article},
+	url = {https://www.scopus.com/inward/record.uri?eid = 2-s2.0-84944937222&doi = 10.1007%2fs00530-015-0489-y&partnerID = 40&md5 = f12764992ee29a4976644aacf6bbb43d},
+	volume = {23},
+	year = {2017}}
+
+@article{zhang2016br,
+	author = {Zhang, JiangLong and Huang, XiangLin and Yang, Lifang and Nie, Liqiang},
+	date-added = {2025-02-22 17:52:10 +0000},
+	date-modified = {2025-02-22 17:53:01 +0000},
+	doi = {10.1016/j.neucom.2016.01.099},
+	journal = {Neurocomputing},
+	number = {SI},
+	pages = {333-341},
+	title = {Bridge the semantic gap between pop music acoustic feature and emotion: Build an interpretable model},
+	volume = {208},
+	year = {2016}}
 
 @article{zentner2008emotions,
 	author = {Zentner, Marcel and Grandjean, Didier and Scherer, Klaus R},
@@ -155,22 +221,6 @@
 	pages = {1459--1462},
 	title = {Opensmile: the munich versatile and fast open-source audio feature extractor},
 	year = {2010}}
-
-@article{zhang2016br,
-	author = {Zhang, JiangLong and Huang, XiangLin and Yang, Lifang and Nie, Liqiang},
-	date-added = {2025-02-09 09:34:29 +0000},
-	date-modified = {2025-02-09 09:34:29 +0000},
-	doi = {10.1016/j.neucom.2016.01.099},
-	eissn = {1872-8286},
-	issn = {0925-2312},
-	journal = {NEUROCOMPUTING},
-	month = {OCT 5},
-	number = {SI},
-	pages = {333-341},
-	source = {web_of_science},
-	title = {Bridge the semantic gap between pop music acoustic feature and emotion: Build an interpretable model},
-	volume = {208},
-	year = {2016}}
 
 @article{yeh2014po,
 	author = {Yeh, Chia-Hung and Tseng, Wen-Yu and Chen, Chia-Yen and Lin, Yu-Dun and Tsai, Yi-Ren and Bi, Hsuan-I and Lin, Yu-Ching and Lin, Ho-Yi},
