--- a/manuscript/_figure2.qmd
+++ b/manuscript/_figure2.qmd
@@ -61,7 +61,7 @@ fp1 <- grid.grabExpr(print(data |>
 
 #### Funnel plot using a custom function
 source('../etc/custom_funnel_plot.R')
-fp2 <- suppressWarnings(custom_funnel_plot(m.cor))
+fp2 <- suppressWarnings(custom_funnel_plot(m.cor, metric = "cor"))
 
 #gridExtra::grid.arrange(fp1, fp2, ncol=2, widths=c(2,1))
 
