--- a/manuscript/_figure4.qmd
+++ b/manuscript/_figure4.qmd
@@ -1,5 +1,5 @@
 ```{r}
-#| label: fig3
+#| label: fig4
 #| fig-width: 16
 #| fig-height: 6
 #| echo: false
@@ -36,7 +36,7 @@ data<-dplyr::arrange(data,mean)
 
 fp1 <- grid.grabExpr(print(data |>
   forestplot(labeltext = c(study, n, cor),
-             xlab = "Correlation",
+             xlab = "Matthews Correlation Coefficient",
              xticks = c(0, .25,.5,.75, 1),
              clip = c(0, 1))|>
     fp_add_header(study = "Study",n = "N",cor = expression(italic(r))) |>
@@ -59,7 +59,7 @@ fp1 <- grid.grabExpr(print(data |>
 
 #### Funnel plot using a custom function
 source('../etc/custom_funnel_plot.R')
-fp2 <- suppressWarnings(custom_funnel_plot(m.cor))
+fp2 <- suppressWarnings(custom_funnel_plot(m.cor, metric = "MCC"))
 
 #gridExtra::grid.arrange(fp1, fp2, ncol=2, widths=c(2,1))
 ggarrange(fp1,fp2, ncol = 2, labels = c("A","B"),widths=c(2,1)) # added labels A and B
